[workspace]
members = [
	".",
	"control/player",
	"render",
	"world",
]

[package]
name = "neuroflap"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
failure = "0.1.1"
futures = "0.1.19"
log = "0.4.1"
neuroflap-control-player = { path = "control/player", optional = true }
neuroflap-render = { path = "render", optional = true }
neuroflap-world = { path = "world" }
stderrlog = { git = "https://github.com/cardoe/stderrlog-rs.git" }
structopt = "0.2.5"

[features]
default = ["play", "simulate", "train"]
play = ["neuroflap-control-player", "neuroflap-render"]
simulate = ["neuroflap-render"]
train = []
