[workspace]
members = [
	".",
	"neat",
	"render",
	"world",
]

[package]
name = "neuroflap"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
Inflector = "0.11.2"
bincode = "1.0.0"
failure = "0.1.1"
futures = "0.1.18"
log = "0.4.1"
neuroflap-neat = { path = "neat", optional = true }
neuroflap-render = { path = "render", optional = true }
neuroflap-world = { path = "world" }
rand = "0.4.2"
stderrlog = { git = "https://github.com/cardoe/stderrlog-rs.git" }
structopt = "0.2.5"
atomicwrites = "0.2.1"

[features]
default = ["play", "simulate", "train"]
play = ["neuroflap-render"]
simulate = ["neuroflap-neat", "neuroflap-render"]
train = ["neuroflap-neat"]
