[package]
name = "neuroflap-neat"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
derive_more = "0.9.0"
float-ord = "0.2.0"
rand = "0.4.2"
serde = "1.0.36"
serde_derive = "1.0.35"
structopt = "0.2.5"
strum = "0.9.0"
strum_macros = "0.9.0"

[dev-dependencies]
serde_json = "1.0.13"
